--- a/MMLLMValidatorsTesting/src/config/config.toml
+++ b/MMLLMValidatorsTesting/src/config/config.toml
@@ -74,8 +74,9 @@ L_Gemma327B="google/gemma-3-27b-it"
 L_Qwen25VL72B="Qwen/Qwen2.5-VL-72B-Instruct"
 
 [models.openai]
-GPT4o = "gpt-4o"
-GPT4oMini = "gpt-4o-mini"
+GPT5Mini = "gpt-5-mini-2025-08-07"
+GPT5Nano = "gpt-5-nano-2025-08-07"
+GPT4oMini = "gpt-4o-mini-2024-07-18"
 
 
 # =============================================================================
